Add basic stats API.
Can be used to query number of sessions, rooms and (if Janus is configured),
overall MCU clients and publishers.

--- a/server.conf.in
+++ b/server.conf.in
@@ -110,3 +110,8 @@ url =
 # information.
 # Leave empty to disable GeoIP lookups.
 #license =
+
+[stats]
+# Comma-separated list of IP addresses that are allowed to access the stats
+# endpoint. Leave empty (or commented) to only allow access from "127.0.0.1".
+#allowed_ips =
