Keep the continent map in the repository to avoid download on build.
Regularly check through CI cron job that it is the latest version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ cache:
 install:
   - make godeps
   - make dependencies
+  - if [[ "$TRAVIS_EVENT_TYPE" == "cron" ]]; then make check-continentmap; fi
 
 script:
   - make client
