CI: Show coverage report.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,3 +44,27 @@ jobs:
     - name: Generate coverage report
       run: |
         make cover || make cover
+
+    - name: Convert coverage to lcov
+      uses: jandelgado/gcov2lcov-action@v1.0.2
+      with:
+          infile: cover.out
+          outfile: cover.lcov
+
+    - name: Coveralls Parallel
+      uses: coverallsapp/github-action@master
+      with:
+        path-to-lcov: cover.lcov
+        github-token: ${{ secrets.github_token }}
+        flag-name: run-${{ matrix.go-version }}
+        parallel: true
+
+  finish:
+    needs: go
+    runs-on: ubuntu-latest
+    steps:
+    - name: Coveralls Finished
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.github_token }}
+        parallel-finished: true
