CI: Set "MAXMIND_GEOLITE2_LICENSE" variable to enable GeoIP tests.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,8 @@ on:
 
 jobs:
   go:
+    env:
+      MAXMIND_GEOLITE2_LICENSE: ${{ secrets.MAXMIND_GEOLITE2_LICENSE }}
     strategy:
       matrix:
         go-version:
