--- a/proxy.conf.in
+++ b/proxy.conf.in
@@ -12,6 +12,13 @@
 # servers to determine the closest proxy for publishers.
 #country = DE
 
+# Type of token configuration for signaling servers allowed to connect, see
+# below for details. Defaults to "static".
+#
+# Possible values:
+# - static: A mapping of token id -> public key is configured below.
+token_type = static
+
 [sessions]
 # Secret value used to generate checksums of sessions. This should be a random
 # string of 32 or 64 bytes.
@@ -30,7 +37,8 @@ blockkey = -encryption-key-
 #url = nats://localhost:4222
 
 [tokens]
-# Mapping of <tokenid> = <publickey> of signaling servers allowed to connect.
+# For token_type "static": Mapping of <tokenid> = <publickey> of signaling
+# servers allowed to connect.
 #server1 = pubkey1.pem
 #server2 = pubkey2.pem
 
