Use dedicated (shorter) timeout for proxy requests.
This will prevent the overall MCU timeout to expire on the first proxy
request if that takes too long. With the shorter proxy timeout, the other
proxy servers will be retried if the first request timed out.

--- a/server.conf.in
+++ b/server.conf.in
@@ -116,6 +116,9 @@ connectionsperhost = 8
 # Default is 2 mbit/sec.
 #maxscreenbitrate = 2097152
 
+# For type "proxy": timeout in seconds for requests to the proxy server.
+#proxytimeout = 2
+
 # For type "proxy": type of URL configuration for proxy servers.
 # Defaults to "static".
 #
