--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,4 +21,4 @@ jobs:
       - name: lint
         uses: golangci/golangci-lint-action@v2.5.2
         with:
-          version: v1.29
+          version: latest
