CI: Only run workflows if relevant files have changed.

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -3,8 +3,14 @@ name: "CodeQL"
 on:
   push:
     branches: [ master ]
+    paths:
+      - '**.go'
+      - 'go.*'
   pull_request:
     branches: [ master ]
+    paths:
+      - '**.go'
+      - 'go.*'
   schedule:
     - cron: '28 2 * * 5'
 
