--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,8 +3,14 @@ name: lint
 on:
   push:
     branches: [ master ]
+    paths:
+      - '**.go'
+      - 'go.*'
   pull_request:
     branches: [ master ]
+    paths:
+      - '**.go'
+      - 'go.*'
 
 jobs:
   lint:
