--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,16 @@ name: test
 on:
   push:
     branches: [ master ]
+    paths:
+      - '**.go'
+      - 'go.*'
+      - 'Makefile'
   pull_request:
     branches: [ master ]
+    paths:
+      - '**.go'
+      - 'go.*'
+      - 'Makefile'
 
 jobs:
   go:
