Migrate to structured logging using "go.uber.org/zap".
First step: migrate standard logging calls to "zap" logger calls.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,9 +1,19 @@
 linters:
   enable:
     - gofmt
+    - govet
     - revive
 
 linters-settings:
+  govet:
+    settings:
+      printf:
+        funcs:
+          - (github.com/strukturag/nextcloud-spreed-signaling.Logger).Debugf
+          - (github.com/strukturag/nextcloud-spreed-signaling.Logger).Errorf
+          - (github.com/strukturag/nextcloud-spreed-signaling.Logger).Fatalf
+          - (github.com/strukturag/nextcloud-spreed-signaling.Logger).Infof
+          - (github.com/strukturag/nextcloud-spreed-signaling.Logger).Warnf
   revive:
     ignoreGeneratedHeader: true
     severity: warning
