CI: Run when workflow yaml file has changed.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches: [ master ]
     paths:
+      - '.github/workflows/lint.yml'
       - '**.go'
       - 'go.*'
   pull_request:
     branches: [ master ]
     paths:
+      - '.github/workflows/lint.yml'
       - '**.go'
       - 'go.*'
 
