--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches: [ master ]
     paths:
+      - '.github/workflows/codeql-analysis.yml'
       - '**.go'
       - 'go.*'
   pull_request:
     branches: [ master ]
     paths:
+      - '.github/workflows/codeql-analysis.yml'
       - '**.go'
       - 'go.*'
   schedule:
