CI: Fix condition for running Docker builds.
Follow-up to #258.

--- a/.github/workflows/docker-coturn.yml
+++ b/.github/workflows/docker-coturn.yml
@@ -5,10 +5,12 @@ on:
     branches: [ master ]
     paths:
       - '.github/workflows/docker-coturn.yml'
+      - 'docker/coturn/Dockerfile'
   push:
     branches: [ master ]
     paths:
       - '.github/workflows/docker-coturn.yml'
+      - 'docker/coturn/Dockerfile'
 
 jobs:
   build:
