Add initial clustering support.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -45,6 +45,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt -y update && sudo apt -y install protobuf-compiler
           make common
 
       - name: lint
