CI: Fix condition to run tarball tests.

--- a/.github/workflows/tarball.yml
+++ b/.github/workflows/tarball.yml
@@ -4,14 +4,14 @@ on:
   push:
     branches: [ master ]
     paths:
-      - '.github/workflows/build.yml'
+      - '.github/workflows/tarball.yml'
       - '**.go'
       - 'go.*'
       - 'Makefile'
   pull_request:
     branches: [ master ]
     paths:
-      - '.github/workflows/build.yml'
+      - '.github/workflows/tarball.yml'
       - '**.go'
       - 'go.*'
       - 'Makefile'
