--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Pull Docker images
-        run: docker-compose pull
+        run: docker-compose -f docker/docker-compose.yml pull
 
   build:
     runs-on: ubuntu-latest
@@ -29,4 +29,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build Docker images
-        run: docker-compose build
+        run: docker-compose -f docker/docker-compose.yml build
