--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  server:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,3 +20,19 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
+          file: docker/server/Dockerfile
+
+  proxy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: docker/proxy/Dockerfile
