--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -21,12 +24,16 @@ jobs:
         with:
           context: .
           file: docker/server/Dockerfile
+          platforms: linux/amd64,linux/arm64
 
   proxy:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -36,3 +43,4 @@ jobs:
         with:
           context: .
           file: docker/proxy/Dockerfile
+          platforms: linux/amd64,linux/arm64
