CI: Setup permissions for workflows.

--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -12,6 +12,9 @@ on:
       - '.github/workflows/docker-compose.yml'
       - 'docker-compose.yml'
 
+permissions:
+  contents: read
+
 jobs:
   pull:
     runs-on: ubuntu-latest
