Set "platforms" when building with docker-compose.
Follow-up to #384.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ..
       dockerfile: docker/server/Dockerfile
+      platforms:
+        - "linux/amd64"
     volumes:
       - ./server.conf:/config/server.conf
     network_mode: host
