--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -24,8 +24,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Update docker-compose
+        run: |
+          curl -SL https://github.com/docker/compose/releases/download/v2.15.1/docker-compose-linux-x86_64 -o docker-compose
+          chmod a+x docker-compose
+
       - name: Pull Docker images
-        run: docker-compose -f docker/docker-compose.yml pull
+        run: ./docker-compose -f docker/docker-compose.yml pull
 
   build:
     runs-on: ubuntu-latest
@@ -33,5 +38,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Update docker-compose
+        run: |
+          curl -SL https://github.com/docker/compose/releases/download/v2.15.1/docker-compose-linux-x86_64 -o docker-compose
+          chmod a+x docker-compose
+
       - name: Build Docker images
-        run: docker-compose -f docker/docker-compose.yml build
+        run: ./docker-compose -f docker/docker-compose.yml build
