--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,6 +9,9 @@ on:
 permissions:
   contents: read
 
+env:
+  TEST_TAG: strukturag/nextcloud-spreed-signaling:test
+
 jobs:
   server:
     runs-on: ubuntu-latest
@@ -21,6 +24,18 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Build Docker image for testing
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: docker/server/Dockerfile
+          load: true
+          tags: ${{ env.TEST_TAG }}
+
+      - name: Test Docker image
+        run: |
+          docker run --rm ${{ env.TEST_TAG }} /usr/bin/nextcloud-spreed-signaling --version
 
       - name: Build Docker image
         uses: docker/build-push-action@v4
@@ -40,6 +55,18 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      - name: Build Docker image for testing
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: docker/proxy/Dockerfile
+          load: true
+          tags: ${{ env.TEST_TAG }}
+
+      - name: Test Docker image
+        run: |
+          docker run --rm ${{ env.TEST_TAG }} /usr/bin/nextcloud-spreed-signaling-proxy --version
 
       - name: Build Docker image
         uses: docker/build-push-action@v4
