docker: Switch to Debian base image.
With Go 1.20, a dependency to "libresolv.so.2" is added which is not available
in Alpine.

--- a/docker/proxy/Dockerfile
+++ b/docker/proxy/Dockerfile
@@ -10,11 +10,13 @@ RUN apt-get -y update && \
     if [ -d "vendor" ]; then GOOS=${TARGETOS} GOARCH=${TARGETARCH} GOPROXY=off make proxy -j$(nproc); else \
     GOOS=${TARGETOS} GOARCH=${TARGETARCH} make proxy -j$(nproc); fi
 
-FROM alpine:3
+FROM debian:bullseye-slim
 
 ENV CONFIG=/config/proxy.conf
-RUN adduser -D spreedbackend && \
-    apk add --no-cache bash ca-certificates libc6-compat libstdc++
+RUN adduser --system --no-create-home spreedbackend && \
+    apt-get update -y && \
+    apt-get install -y ca-certificates && \
+    rm -rf /var/apt/lists/*
 
 COPY --from=builder /workdir/bin/proxy /usr/bin/nextcloud-spreed-signaling-proxy
 COPY ./proxy.conf.in /config/proxy.conf.in
