keep Docker images alpine based
Signed-off-by: Zoey <zoey@z0ey.de>

--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -1,28 +1,25 @@
-FROM --platform=${BUILDPLATFORM} golang:1.20 AS builder
-
-WORKDIR /workdir
-
+FROM --platform=${BUILDPLATFORM} golang:1.20-alpine AS builder
 ARG TARGETARCH
 ARG TARGETOS
 
+WORKDIR /workdir
+
 COPY . .
-RUN apt-get -y update && \
-    apt-get -y install protobuf-compiler && \
+RUN apk add --no-cache bash build-base protobuf && \
     if [ -d "vendor" ]; then GOOS=${TARGETOS} GOARCH=${TARGETARCH} GOPROXY=off make server -j$(nproc); else \
     GOOS=${TARGETOS} GOARCH=${TARGETARCH} make server -j$(nproc); fi
 
-FROM debian:bullseye-slim
+FROM alpine:3
 
 ENV CONFIG=/config/server.conf
-RUN adduser --system --no-create-home spreedbackend && \
-    apt-get update -y && \
-    apt-get install -y ca-certificates && \
-    rm -rf /var/apt/lists/*
+RUN adduser -D spreedbackend && \
+    apk add --no-cache bash tzdata ca-certificates
 
 COPY --from=builder /workdir/bin/signaling /usr/bin/nextcloud-spreed-signaling
 COPY ./server.conf.in /config/server.conf.in
 COPY ./docker/server/entrypoint.sh /
 RUN chown spreedbackend /config
+RUN /usr/bin/nextcloud-spreed-signaling -version
 
 USER spreedbackend
 
