--- a/docker/proxy/Dockerfile
+++ b/docker/proxy/Dockerfile
@@ -1,27 +1,25 @@
-FROM --platform=${BUILDPLATFORM} golang:1.20 AS builder
+FROM --platform=${BUILDPLATFORM} golang:1.20-alpine AS builder
 ARG TARGETARCH
 ARG TARGETOS
 
 WORKDIR /workdir
 
 COPY . .
-RUN apt-get -y update && \
-    apt-get -y install protobuf-compiler && \
+RUN apk add --no-cache bash git build-base protobuf && \
     if [ -d "vendor" ]; then GOOS=${TARGETOS} GOARCH=${TARGETARCH} GOPROXY=off make proxy -j$(nproc); else \
     GOOS=${TARGETOS} GOARCH=${TARGETARCH} make proxy -j$(nproc); fi
 
-FROM debian:bullseye-slim
+FROM alpine:3
 
 ENV CONFIG=/config/proxy.conf
-RUN adduser --system --no-create-home spreedbackend && \
-    apt-get update -y && \
-    apt-get install -y ca-certificates && \
-    rm -rf /var/apt/lists/*
+RUN adduser -D spreedbackend && \
+    apk add --no-cache bash tzdata ca-certificates
 
 COPY --from=builder /workdir/bin/proxy /usr/bin/nextcloud-spreed-signaling-proxy
 COPY ./proxy.conf.in /config/proxy.conf.in
 COPY ./docker/proxy/entrypoint.sh /
 RUN chown spreedbackend /config
+RUN /usr/bin/nextcloud-spreed-signaling-proxy -version
 
 USER spreedbackend
 
