--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,9 +30,9 @@ jobs:
 
       - id: go-cache-paths
         run: |
-          echo "::set-output name=go-build::$(go env GOCACHE)"
-          echo "::set-output name=go-mod::$(go env GOMODCACHE)"
-          echo "::set-output name=go-version::$(go version | cut -d ' ' -f 3)"
+          echo "go-build=$(go env GOCACHE)" >> $GITHUB_OUTPUT
+          echo "go-mod=$(go env GOMODCACHE)" >> $GITHUB_OUTPUT
+          echo "go-version=$(go version | cut -d ' ' -f 3)" >> $GITHUB_OUTPUT
 
       - name: Go build cache
         uses: actions/cache@v3
