--- a/.github/workflows/deploydocker.yml
+++ b/.github/workflows/deploydocker.yml
@@ -98,12 +98,14 @@ jobs:
           labels: |
             org.opencontainers.image.title=nextcloud-spreed-signaling-proxy
             org.opencontainers.image.description=Signaling proxy for the standalone signaling server for Nextcloud Talk.
+          flavor: |
+            suffix=-proxy,onlatest=true
           tags: |
-            type=ref,event=branch,suffix=-proxy
-            type=semver,pattern={{version}},suffix=-proxy
-            type=semver,pattern={{major}}.{{minor}},suffix=-proxy
-            type=semver,pattern={{major}},suffix=-proxy
-            type=sha,prefix=,suffix=-proxy
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha,prefix=
       - name: Cache Docker layers
         uses: actions/cache@v3
         with:
