--- a/.github/workflows/tarball.yml
+++ b/.github/workflows/tarball.yml
@@ -93,7 +93,7 @@ jobs:
     - name: Extract tarball
       run: |
         mkdir -p tmp
-        tar xf nextcloud-spreed-signaling*.tar.gz --strip-components=1 -C tmp
+        tar xvf nextcloud-spreed-signaling*.tar.gz --strip-components=1 -C tmp
         [ -d "tmp/vendor" ] || exit 1
 
     - name: Build
